--- a/Ring/Ring.csproj
+++ b/Ring/Ring.csproj
@@ -243,7 +243,7 @@
       <DependentUpon>BatchQueryView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Views\MakeReadyTank.xaml.cs">
+    <Compile Include="Views\MainScreen\MakeReadyTank.xaml.cs">
       <DependentUpon>MakeReadyTank.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PasswordDialog.xaml.cs">
@@ -361,7 +361,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\MakeReadyTank.xaml">
+    <Page Include="Views\MainScreen\MakeReadyTank.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
