--- a/Ring/Ring.csproj
+++ b/Ring/Ring.csproj
@@ -555,6 +555,30 @@
     <Resource Include="Images\Valve01.png" />
     <Resource Include="Images\Valvegn01.png" />
     <Resource Include="Images\Valverd01.png" />
+    <Resource Include="Images\Make Ready Tank\MRT.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_agitator.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_additive1.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_additive1_agitator.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_additive2.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_additive2_agitator.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_additive3.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_additive3_agitator.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_alt_water.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_alt_water_agitator.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_borax.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_borax_agitator.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_caustic.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_caustic_agitator.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_discharge.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_discharge_agitator.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_dom_starch.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_dom_starch_agitator.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_main_water.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_main_water_agitator.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_mod_starch.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_mod_starch_agitator.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_steam.png" />
+    <Resource Include="Images\Make Ready Tank\MRT_steam_agitator.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Config\" />
