--- a/Ring/packages.config
+++ b/Ring/packages.config
@@ -27,9 +27,11 @@
   <package id="OxyPlot.Core" version="2.2.0" targetFramework="net472" />
   <package id="OxyPlot.Wpf" version="2.2.0" targetFramework="net472" />
   <package id="OxyPlot.Wpf.Shared" version="2.2.0" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Data.SQLite" version="2.0.2" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="9.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
