--- a/Ring/Ring.csproj
+++ b/Ring/Ring.csproj
@@ -502,20 +502,6 @@
     <Resource Include="app.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\act01.png" />
-    <Resource Include="Images\act02.png" />
-    <Resource Include="Images\act05.png" />
-    <Resource Include="Images\actgn01.png" />
-    <Resource Include="Images\actgn02.png" />
-    <Resource Include="Images\actgn02left.png" />
-    <Resource Include="Images\actgn02right.png" />
-    <Resource Include="Images\actgn05.png" />
-    <Resource Include="Images\actrd01.png" />
-    <Resource Include="Images\actrd02.png" />
-    <Resource Include="Images\actrd05.png" />
-    <Resource Include="Images\Baghouse.png" />
-    <Resource Include="Images\Baghousegn.png" />
-    <Resource Include="Images\Baghouserd.png" />
     <Resource Include="Images\BannerRingwood.png" />
     <Resource Include="Images\fill-green.png" />
     <Resource Include="Images\LogoCompany.png" />
@@ -524,21 +510,6 @@
     <Resource Include="Images\LogoRingwood.png" />
     <Resource Include="Images\LogoSSCC.png" />
     <Resource Include="Images\LogoWeyerhaeuser.png" />
-    <Resource Include="Images\Motor01.png" />
-    <Resource Include="Images\Motor03.png" />
-    <Resource Include="Images\Motorgn01.png" />
-    <Resource Include="Images\Motorgn03.png" />
-    <Resource Include="Images\Motorrd01.png" />
-    <Resource Include="Images\Motorrd03.png" />
-    <Resource Include="Images\norcross.png" />
-    <Resource Include="Images\norcrossgn.png" />
-    <Resource Include="Images\norcrossrd.png" />
-    <Resource Include="Images\probe01.png" />
-    <Resource Include="Images\probegn01.png" />
-    <Resource Include="Images\proberd01.png" />
-    <Resource Include="Images\pumpn01.png" />
-    <Resource Include="Images\pumpngn01.png" />
-    <Resource Include="Images\pumpnrd01.png" />
     <Resource Include="Images\Ringwood Splash Center.png" />
     <Resource Include="Images\Ringwood Splash Left.png" />
     <Resource Include="Images\Ringwood Splash Right.png" />
@@ -546,15 +517,6 @@
     <Resource Include="Images\Splash Center.png" />
     <Resource Include="Images\Splash Left.png" />
     <Resource Include="Images\Splash Right.png" />
-    <Resource Include="Images\tank.png" />
-    <Resource Include="Images\tvc.png" />
-    <Resource Include="Images\uselegs.png" />
-    <Resource Include="Images\usesquare.png" />
-    <Resource Include="Images\usesquareleg.png" />
-    <Resource Include="Images\usetank.png" />
-    <Resource Include="Images\Valve01.png" />
-    <Resource Include="Images\Valvegn01.png" />
-    <Resource Include="Images\Valverd01.png" />
     <Resource Include="Images\Make Ready Tank\MRT.png" />
     <Resource Include="Images\Make Ready Tank\MRT_agitator.png" />
     <Resource Include="Images\Make Ready Tank\MRT_additive1.png" />
@@ -579,6 +541,14 @@
     <Resource Include="Images\Make Ready Tank\MRT_mod_starch_agitator.png" />
     <Resource Include="Images\Make Ready Tank\MRT_steam.png" />
     <Resource Include="Images\Make Ready Tank\MRT_steam_agitator.png" />
+    <Resource Include="Images\Storage Tank\storagetank.png" />
+    <Resource Include="Images\Storage Tank\storagetank_agitator.png" />
+    <Resource Include="Images\Storage Tank\storagetank_filling.png" />
+    <Resource Include="Images\Storage Tank\storagetank_agitator_filling.png" />
+    <Resource Include="Images\Storage Tank\storagetank_transferring.png" />
+    <Resource Include="Images\Storage Tank\storagetank_agitator_transferring.png" />
+    <Resource Include="Images\Storage Tank\storagetank_filling_transferring.png" />
+    <Resource Include="Images\Storage Tank\storagetank_agitator_filling_transferring.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Config\" />
